syntax = "proto3";

package url_shorts;

option go_package = "/url_shorts";

import "google/protobuf/timestamp.proto";

service UrlShorts {
  rpc Create(CreateUrlShortRequest) returns (CreateUrlShortResponse);
  rpc Get(GetUrlShortRequest) returns (GetUrlShortResponse);
}

message CreateUrlShortRequest {
  string original_url = 1;
  google.protobuf.Timestamp expire_at = 2;
}

message CreateUrlShortResponse {
  string original_url = 2;
  string short_url = 3;
  google.protobuf.Timestamp expire_at = 4;
  int64 visits = 5;
  google.protobuf.Timestamp created_at = 6;
}

message GetUrlShortRequest {
}

message GetUrlShortResponse {
}
